--- a/final.html
+++ b/final.html
@@ -1143,12 +1143,22 @@ out geom;
                     return;
                 }
 
+                const queryCandidates = [
+                    `${roadName} 苏州`,
+                    `${roadName} 苏州市`,
+                    roadName
+                ];
+                let currentIndex = 0;
+
                 const localSearch = new BMap.LocalSearch(map, {
                     onSearchComplete: function(results) {
-                        if (localSearch.getStatus() === BMAP_STATUS_SUCCESS && results && results.getNumPois() > 0) {
+                        const statusOk = localSearch.getStatus() === BMAP_STATUS_SUCCESS;
+                        const hasPois = statusOk && results && typeof results.getNumPois === 'function' && results.getNumPois() > 0;
+
+                        if (hasPois) {
                             const firstResult = results.getPoi(0);
                             if (!firstResult || !firstResult.point) {
-                                reject(new Error('\u672a\u83b7\u53d6\u5230\u8be5\u9053\u8def\u7684\u5750\u6807\u3002'));
+                                tryNextQuery();
                                 return;
                             }
 
@@ -1160,12 +1170,29 @@ out geom;
                                 .then(resolve)
                                 .catch(reject);
                         } else {
-                            reject(new Error('\u672a\u5728\u767e\u5ea6\u68c0\u7d22\u4e2d\u627e\u5230\u8be5\u9053\u8def\u3002'));
+                            tryNextQuery();
                         }
                     }
                 });
 
-                localSearch.search(roadName + ' 苏州');
+                function tryNextQuery() {
+                    if (currentIndex >= queryCandidates.length) {
+                        reject(new Error('\u672a\u5728\u767e\u5ea6\u68c0\u7d22\u4e2d\u627e\u5230\u8be5\u9053\u8def\u3002'));
+                        return;
+                    }
+
+                    const nextQuery = queryCandidates[currentIndex].trim();
+                    currentIndex += 1;
+
+                    if (!nextQuery) {
+                        tryNextQuery();
+                        return;
+                    }
+
+                    localSearch.search(nextQuery);
+                }
+
+                tryNextQuery();
             });
         }
 
